--- a/index.html
+++ b/index.html
@@ -3,10 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@100;200;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <title>Anita's Kitchen</title>
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
-    
+    <!-- Start of section One -->
+    <section class="sectionone">
+        <div class="logo">
+            <a href="#"><img src="./Images/menu.png" alt=""></a>
+        </div>
+        <div class="banner">
+            <div class="bannercontent">
+
+                <img src="./Images/logoBig.png" alt="">
+                <p>We Provide The Best Food <br> At The <span>Right Place</span></p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
