Added color to section Two Text content

--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
     <!-- Start of section Two -->
     <section class="sectiontwo">
         <div class="time">
-            <div class="upper"></div>
-            <div class="lower"></div>
+            <div class="upper">
+                <p>Happy Hour</p>
+            </div>
+            <div class="lower">
+                <p>Party Time</p>
+            </div>
         </div>
         <div class="breako">
             
