--- a/index.html
+++ b/index.html
@@ -44,5 +44,9 @@
             
         </div>
     </section>
+    <!-- End of section Two -->
+
+    <!-- Start Of Section Three -->
+    
 </body>
 </html>
