Added the fast food section

--- a/index.html
+++ b/index.html
@@ -49,6 +49,17 @@
     <!-- End of section Two -->
 
     <!-- Start Of Section Three -->
+    <section class="sectionthree">
+        <div class="upperdiv">
+            <div class="img">
+
+            </div>
+            <div class="text">
+                
+            </div>
+        </div>
+        <div class="lowerdiv"></div>
+    </section>
 
 </body>
 </html>
