Added image and text to the lower div of the fast food section

--- a/index.html
+++ b/index.html
@@ -52,13 +52,27 @@
     <section class="sectionthree">
         <div class="upperdiv">
             <div class="img">
-
+                <img src="./Images/fastFood1.jpg" alt="">
+                <img src="./Images/fastFood2.jpg" alt="">
             </div>
             <div class="text">
-                
+                <h1>Fast Food</h1>
+                <p class="Heading">You'll love our delicious fast food </p>
+                <p> Lorem ipsum dolor sit amet, consectetur adipisic <br> ing elit, sed do eiusmod tempor incididunt ut <br> labore et dolore magna aliqua. Ut enim ad minim <br> veniam, quis nostrud exercitation ullamco laboris <br> nisi ut aliquip ex ea commodo consequat. Duis <br> aute irure dolor in re prehenderit in voluptate velit <br> esse cillum dolore eu fugiat nulla pariator. Exce <br> teur sint occaecat datat non proident</p>
+                <button>View Gallery <img class="arrow" src="./Images/right-arrows.png" alt=""></button>
             </div>
         </div>
-        <div class="lowerdiv"></div>
+        <div class="lowerdiv">
+            <div class="text">
+                <h1>Drinks</h1>
+                <p class="Heading">We also produce delicious Drinks </p>
+                <p> Lorem ipsum dolor sit amet, consectetur adipisic <br> ing elit, sed do eiusmod tempor incididunt ut <br> labore et dolore magna aliqua. Ut enim ad minim <br> veniam, quis nostrud exercitation ullamco laboris <br> nisi ut aliquip ex ea commodo consequat. Duis <br> aute irure dolor in re prehenderit in voluptate velit <br> esse cillum dolore eu fugiat nulla pariator. Exce <br> teur sint occaecat datat non proident</p>
+                <button>View Gallery <img class="arrow" src="./Images/right-arrows.png" alt=""></button>
+            </div>
+            <div class="img">
+
+            </div>
+        </div>
     </section>
 
 </body>
