Finish the fast food section

--- a/index.html
+++ b/index.html
@@ -70,10 +70,12 @@
                 <button>View Gallery <img class="arrow" src="./Images/right-arrows.png" alt=""></button>
             </div>
             <div class="img">
-
+                <img src="./Images/drink1.jpg" alt="">
+                <img src="./Images/drink2.jpg" alt="">
             </div>
         </div>
     </section>
-
+<!-- End of section Three -->
+<!-- Start of section Four -->
 </body>
 </html>
