Added more properties to the section four

--- a/index.html
+++ b/index.html
@@ -75,7 +75,13 @@
             </div>
         </div>
     </section>
-<!-- End of section Three -->
-<!-- Start of section Four -->
+    <!-- End of section Three -->
+    <!-- Start of section Four -->
+    <section class="sectionfour">
+        <div class="textdiv">
+            
+        </div>
+    </section>
+
 </body>
 </html>
