--- a/index.html
+++ b/index.html
@@ -79,7 +79,13 @@
     <!-- Start of section Four -->
     <section class="sectionfour">
         <div class="textdiv">
-            
+            <div class="header">
+                <div class="fastfood"> <p>Fast Food</p></div>
+                <div class="drinks"> <p>Drinks</p></div>
+                <div class="chicken"> <p>Chicken</p></div>
+                <div class="rice"><p>Rice</p></div>
+            </div>
+            <div class="photos"></div>
         </div>
     </section>
 
