Added more content to the fast food section

--- a/index.html
+++ b/index.html
@@ -85,7 +85,22 @@
                 <div class="chicken"> <p>Chicken</p></div>
                 <div class="rice"><p>Rice</p></div>
             </div>
-            <div class="photos"></div>
+            <div class="photos">
+                <img class="mshale1" src="./Images/left-arrow.png" alt="">
+                <div class="photo1">
+                    <img src="./Images/fastfood/beefBurger.jpg" alt="">
+                    <p>Chicken Burger</p>
+                </div>
+                <div class="photo2">
+                    <img src="./Images/fastfood/chickenBurger.jpg" alt="">
+                    <p>Beef Burger</p>
+                </div>
+                <div class="photo3">
+                    <img src="./Images/fastfood/chickenPizza.jpg" alt="">
+                    <p>Chicken Pizza</p>
+                </div>
+                <img class="mshale" src="./Images/right-arrow.png" alt="">
+            </div>
         </div>
     </section>
 
