Added the About Menu section

--- a/index.html
+++ b/index.html
@@ -107,8 +107,22 @@
     <!-- Start of section five -->
     <section class="sectionfive">
         <div class="maindiv">
-            <div class="testmony"></div>
-            <div class="aboutMenu"></div>
+            <div class="testmony">
+                <h1>Our Happy Customers</h1>
+                <h4>George Richard</h4>
+                <p>Great food! Menu is awesome, there food are not only great but  <br> also in the right price. I'll highly recommend them :) </p>
+                <div class="pictures">
+                    <img src="./Images/left-arrow.png" alt="">
+                    <img src="./Images/customers/p1.png" alt="">
+                    <img src="./Images/customers/p2.png" alt="">
+                    <img src="./Images/customers/p3.png" alt="">
+                    <img src="./Images/right-arrow.png" alt="">
+                </div>
+            </div>
+            <div class="aboutMenu">
+                <h1>About Menu</h1>
+                <p>We are menu a little team of 7 members <br> ut wisi enim minim veniam, quis nos <br> trudexer ci tation ullamcorper suscipit lob <br> ortis nisl ut aliquip ex ea commodo conse <br>quat. Duisau tem vel eum iriure dolor in</p>
+            </div>
         </div>
     </section>
 
