Added the footer section

--- a/index.html
+++ b/index.html
@@ -125,6 +125,33 @@
             </div>
         </div>
     </section>
-
+    <!-- End of section Five -->
+    <!-- Start of section Six -->
+    <section class="sectionsix">
+        <div class="action">
+            <p>Get our daily food items delivered to your email</p>
+            <div class="input">
+                <input type="email" placeholder="Your Email">
+                <button>Subscribe</button>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="one">
+                <img src="./Images/footerlogos/logo_white.png" alt="">
+                <h1>MENU</h1>
+            </div>
+            <div class="two">
+                <p>Thats What We Are</p>
+            </div>
+            <div class="three">
+                <img src="./Images/footerlogos/facebook.png" alt="">
+                <img src="./Images/footerlogos/twitter.png" alt="">
+                <img src="./Images/footerlogos/pinterest.png" alt="">
+            </div>
+            <div class="four">
+                <p>2016 Menu Restaurant</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
