Made color changes, it will help the colors to look like the ones in the UI

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="banner">
             <div class="bannercontent">
 
-                <img src="./Images/logoBig.png" alt="">
+                <img class="biglogo" src="./Images/logoBig.png" alt="">
                 <p>We Provide The Best Food <br> At The <span>Right Place</span></p>
             </div>
         </div>
@@ -154,4 +154,4 @@
         </div>
     </section>
 </body>
-</html>
+</html>qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqq
